# Nix_Configuration

./: .directory  .gitattributes  .gitignore  Ai.nix  ID.nix  NetworkProfiles.nix  README  README.md  Sensors.txt  Wireless_Regulation.nix  bash.nix  bash.sh  commented.nix  configuration.nix  configuration.nix.save  control-hardware.nix  desktop.nix  graphics.nix  h.txt  hardware-configuration.nix  init_db.sql  networking.nix  nix-system.nix  secrets.nix  security.nix  systemd.nix  virtualisation.nix
Dev/: Pandoc.nix  PostgreSQL.nix  UML.nix  cpp.nix  cpp_env.nix  dart.nix  general.nix  git.nix  nix-ld.nix  nix.nix  overlays.nix  python.nix  sql.nix  vscode_config.jsonc  vscodium.nix  ztop.nix
Dev/Domain_Specific/: Big_Data.nix  Docs.nix  GUIs.nix  KBS.nix  Pandoc.nix  PostgreSQL.nix  UML.nix  android.nix  arcadedbserv.nix  embedded.nix  image_processing.nix  jupyter.nix  ztop.nix
Dev/IDEs/: nvim.nix  vscode_config.jsonc  vscodium.nix
Dev/Langs/: cpp.nix  dart.nix  db.nix  go.nix  java.nix  kotlin.nix  nix.nix  prolog.nix  python.nix  rust.nix  sql.nix  zig.nix  ztop.nix
Docs/: How_to_git.md
ID/: ID.nix  detect-hardware.sh
Langs/: UML.nix  cpp.nix  env.nix  general.nix  nix.nix  overlays.nix  python.nix  rust.nix  sql-server.nix  sql.nix  vscodium.nix  ztop.nix
Networking/: Firewall.nix  GNS.nix  NetworkProfiles.nix  Network_Kernel_Parameters.nix  Networking.nix  TimeSync.nix  Wireless_Regulation.nix  claudflare-warp.nix
Networking/DNS/: cache.nix  resolver.nix  test.nix  test2.nix  ztop.nix
Networking/Profiles/: gu.nix  hosted.nix  hotspot.nix  personal.nix  wired.nix  ztop.nix
Networking/Protocols/: openvpn.nix  ssh.nix  wireguard.nix  ztop.nix
Networking/hardening/: NetworkManager_hardening.nix  Network_Kernel_Parameters.nix  ztop.nix
Nix-Shells/: README.md
Nix-Shells/Cpp/: .gitattributes  .gitignore  CMakeLists.txt  shell.nix
Nix-Shells/Cpp/Scripts/: build_profiling.sh  build_release.sh  kernel_security_bypass.sh  profile.sh
Nix-Shells/Python/: RVC_Shell.nix  (+1 more)
Programs/: Any-To-Jpeg.nix  airgeddon.nix  backup.sh  ctj.py  setupcpp.nix  setupcpp.sh  super-productivity.nix
Services/: Ai.nix  Gaming.nix  Jackett.nix  Journal.nix  METASearchEngine.nix  Nextcloud.nix  OBS.nix  Pen_Testing.nix  PipeWire.nix  PowerManagment.nix  SSI.nix  Syncthing.nix  radicale.nix  virtualisation.nix  ztop.nix
Terminal/: bash.nix  bashtest.nix  starship.nix
VMISO/: VM_Configuration.nix  iso.nix
containers/: open-webui.nix
dev-shells/: R310.txt  R312.txt  collector.nix  js-shell.nix  python-shell.nix  python310-shell.nix  python312-shell.nix  requirements.txt  setup-env.nix  setup-env.sh
dev-shells-2/: python-shell-2.nix
nixos/: bash.nix  configuration.nix  hardware-configuration.nix  security.nix
(+108 files in other folders)
